# nbt-sniffer

./: Cargo.toml  LICENSE  README.md  benchmark.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  conversion.rs  counter.rs  lib.rs  main.rs  nbt_utils.rs  tree.rs  view.rs
src/view/: aggregation.rs  builder.rs  item_conversion.rs  json_printer.rs  mod.rs  structures.rs  table_printer.rs
tests/: nbt_subset.rs
