[package]
name = "mc_nbt_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
csv = "1.3"
flate2 = "1.1.1"
mca = "1.0"
ptree = "0.5"
rayon = "1.10"
simdnbt = "0.7"
valence_nbt = { version = "0.8", features = ["snbt"] }
walkdir = "2.5.0"
uuid = "1.17"
serde = "1.0.219"
serde_json = "1.0.140"
